# webServ

./: .gitignore  CMakeLists.txt  README-MODULES  build.sh  main.cpp  simplesocket.hpp  subject_condensed  subject_condensed.txt  test.sh  test_v.sh  vbuild.sh  vtest.sh
ExampleModule/: CMakeLists.txt  main.cpp
ExampleModule/src/: CMakeLists.txt  ExampleClass.cpp  ExampleClass.hpp  ExampleFunction.cpp  ExampleFunction.hpp
ExampleModule/tst/: ExampleClass.cpp  ExampleFunction.cpp  main.cpp
HTTPParse/: CMakeLists.txt  main.cpp
HTTPParse/src/: CMakeLists.txt  HTTPRequest.cpp  HTTPRequest.hpp
HTTPParse/tst/: HTTPRequest.cpp  main.cpp
Util/: CMakeLists.txt  main.cpp
Util/src/: Util.cpp  Util.hpp
Util/tst/: Util.cpp  main.cpp
example_module/: CMakeLists.txt  README  example.run
socket/: BindingSocket.cpp  BindingSocket.hpp  ConnectingSocket.cpp  ConnectingSocket.hpp  simplesocket.cpp  simplesocket.hpp
text_files/: links  notes.txt  subject_condensed.txt  tasks  wsnotes.txt
text_files/rfc/: get_rfc.sh
